# colorimetry

./: README.markdown  colorimetry.cabal
Colorimetry/Illuminant/: .BlackBody.hs.swp  BlackBody.hs
Colorimetry/Observer/: ChromaticResponseModel.hs
Colorimetry/Spectrum/: Class.hs  Hunter.hs  RGB.hs  XYZ.hs
data/illuminant/: D65.1nm  F.5nm  KolorRite.5nm  Natural.5nm  PlusWhite.5nm  Polylux3000.5nm  Polylux4000.5nm  README.txt  TL84.5nm
data/illuminant/old/: A.5nm
data/monitor/: working-space.rgb
data/observer/: CIE-1931.1nm  CIE-1964.1nm  JV.1nm  JV.5nm  README.txt  SJPS10.1nm  SJPS2.1nm  SS10.1nm  SS2.1nm  scotopic.1nm
data/observer/old/: 1931.5nm  CIE-1931.5nm
data/reflectance/: macbeth.5nm
