name:          colorimetry
category:      Graphics
version:       0.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/colorimetry
copyright:     (C) 2012-2013 Edward A. Kmett
synopsis:      Colorimetric illuminants, working spaces, and observer models
description:   Colorimetric illuminants, working spaces, and observer models
build-type:    Simple

data-dir:      data
data-files:    monitor/working-space.rgb
               illuminant/*.1nm,
               illuminant/*.5nm,
               observer/*.1nm,
               observer/*.5nm

source-repository head
  type: git
  location: git://github.com/ekmett/nut.git

library
  build-depends:
    base                 >= 4 && < 5,
    containers           >= 0.3.0.0,
    unordered-containers >= 0.1.4.6,
    vector               >= 0.9.1,
    ghc-prim

  exposed-modules:
    Colorimetry.Illuminant.BlackBody


--    Colorimetry.Illuminant
--    Colorimetry.Illuminant.Standard
--    Colorimetry.Illuminant.NonStandard
--    Colorimetry.Monitor
--    Colorimetry.Observer
--    Colorimetry.Observer.TwoDegree.CIE_1931
--    Colorimetry.Observer.TwoDegree.JuddVos_1978
--    Colorimetry.Observer.TenDegree.CIE_1964
--    Colorimetry.Observer.TenDegree.StockmanSharpe_2000
--    Colorimetry.Observer.TenDegree.StockmanJäglePirzerSharpe_2008
--    Colorimetry.Spectrum.Class
--    Colorimetry.Spectrum.RGB
--    Colorimetry.Spectrum.XYZ
--    Photometry.Photopic
--    Photometry.Scotopic
--
  other-modules:
    Paths_colorimetry

  ghc-options: -Wall
